test_scores/negative_dimers/features/P30260.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P30260.pkl.xz